<resources>
    <string name="app_name">OSDB</string>
    <string name="next">Next</string>
    <string name="facebook_app_id">619731638474322</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="signin">Sign In</string>
    <string name="benifit_1">Benefit #1</string>
    <string name="benifit_2">Benefit #2</string>
    <string name="benifit_3">Benefit #3</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</string>
    <string name="some_error">Error</string>
    <string name="account_exists_text">I already have an account.
        <font color="#6849D7">
            <b>Sign in</b>
        </font>
    </string>
    <string name="dont_have_account_text">Don’t you have an account
        <font color="#6849D7">
            <b>Sign up</b>
        </font>
    </string>
    <string name="logo">Logo</string>
    <string name="login_options_sub_heading">Please select an option below \nin order to continue.</string>
    <string name="welcome_to_osdb">Welcome to OSDB</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="continue_with_amazon">Continue with Amazon</string>
    <string name="create_account">Create Account</string>
    <string name="protect_account">Protect your account</string>
    <string name="protect_account_sub_heading">Add a password to keep your account safe.</string>
    <string name="recover_account">Recover your account</string>
    <string name="recover_account_sub_heading">Please enter your new password below.</string>
    <string name="signin_to_osdb">Sign in to OSDB</string>
    <string name="signin_subheading">Please enter your credentials to proceed.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_sub_heading">We will send password reset\ninstructions on your email.</string>
    <string name="password_min_8">PASSWORD(MIN. 8 CHARACTERS)</string>
    <string name="conf_pass">CONFIRM PASSWORD</string>
    <string name="cont_n">Continue</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up_to_osdb">Sign up to OSDB</string>
    <string name="register_form_subtext">Please fill the fields below to continue.</string>
    <string name="form_terms_line"><![CDATA[By continuing you’re accepting]]></string>
    <string name="protect_your_account">Protect your account</string>
    <string name="register_password_subtext">Add a password to keep your account safe.</string>
    <string name="password_min_8_characters">Password (Min. 8 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_latest">News</string>
    <string name="title_live_scores">Live Scores</string>
    <string name="title_poll">Polls</string>
    <string name="title_discussion">Discussions</string>
    <string name="home_logo">Home Logo</string>
    <string name="sport_icon">Sport Icon</string>
    <string name="on_this_day">On this day</string>
    <string name="sample_text_1">Aaron Rodgers commits future to Green Bay Packers to become NFL\'s highest-paid
        player
    </string>
    <string name="sample_text_4">Who do You think will win Europe Champions League 2018?</string>
    <string name="sample_text_5">His biggest achievement has been winning the 2009 US Open, defeating Rafael Nadal in
        the semifinal and 5-time defending champion Roger Federer in the final. He was the first to defeat both…
    </string>
    <string name="sample_text_6">On July 12, 1921 Babe Ruth sets a record of 137 career home runs. His biggest
        achievement has been winning the 2009 US Open, defeating Rafael Nadal in
        the semifinal and 5-time defending champion Roger Federer in the final. He was the first to defeat both…
    </string>
    <string name="did_you_know">Did you know?</string>
    <string name="item_image">Item image</string>
    <string name="team_logo">Team logo</string>
    <string name="born_today">Born Today</string>
    <string name="featured_athlete">Featured Athlete</string>
    <string name="insta_button">Insta button</string>
    <string name="twitter_button">twitter Button</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="featured_poll">Featured Poll</string>
    <string name="breaking_news">Breaking News</string>
    <string name="sep_16_2018">Sep. 16, 2018</string>
    <string name="_1_min_ago">1 min ago</string>
    <string-array name="sports_names">
        <item>NFL</item>
        <item>NBA</item>
        <item>SOCCER</item>
        <item>NHL</item>
        <item>GOLF</item>
        <item>TENNIS</item>
        <item>BOXING</item>
        <item>NASCAR</item>
        <item>MLB</item>
    </string-array>
    <string-array name="home_item_types">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="option_type">
        <item>A.</item>
        <item>B.</item>
        <item>C.</item>
        <item>D.</item>
        <item>E.</item>
        <item>F.</item>
        <item>G.</item>
        <item>H.</item>
        <item>I.</item>
        <item>J.</item>
        <item>K.</item>
        <item>L.</item>
        <item>M.</item>
        <item>N.</item>
        <item>O.</item>
    </string-array>
    <string name="do_you_know">Do you know</string>
    <string name="dummy_header_text">New Orleans Saints receivers Tommylee Lewis (11) works for a catch against Los
        Angeles
    </string>
    <string name="dummy_detail_text">At least one lawsuit filed against the league by two Saints ticketholders calls on
        Goodell to either reverse the games result or reschedule the game from the point of the no-call – or replay the
        game in its entirety. The league recently said that replaying the game would have been prohibitively costly.
        Goodell insisted that changing the rules to allow penalties or adding an eight official to crews would only
        create more challenges. He acknowledged that expanding instant replay technology was a possibility, but
        qualified that it would not cover judgment calls.
    </string>
    <string name="barcelona">Barcelona</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="metlife_stadium_east_rutherford">MetLife Stadium, East Rutherford</string>
    <string name="bufallo_bills">Bufallo Bills</string>
    <string name="seahawck">Seahawck</string>
    <string name="load_more_news">Load more news</string>
    <string name="load_more_events">Load more events</string>
    <string name="show_details">Show Details</string>
    <string name="share">Share</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="event_details">Event Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="starts_at">starts at</string>
    <string name="versus">Versus</string>
    <string name="no_live_game_currently">No Live Game Currently</string>
    <string name="please_visit_again_for_live_scores">Please visit again for Live Scores</string>
    <string-array name="sampl_news">
        <item>Le\'Veon Bell is making the biggest bet of all in 2018</item>
        <item>Aaron Rodgers commits future to Green</item>
        <item>Newton\'s surgery highlights need for backup QB</item>
        <item>Dak: Kellen Moore \'has got the mind\' for OC job</item>
        <item>NFC comes back to win Pro Bowl Skills Showdown</item>
        <item>Cooks intentionally dropped pass ahead of GW FG</item>
        <item>Rams kicker Greg Zuerlein dealing with foot strain</item>
        <item>Chiefs hire Spagnuolo to replace Bob Sutton</item>
        <item>NFC comes back to win Pro Bowl Skills Showdown</item>
        <item>Cooks intentionally dropped pass ahead of GW FG</item>
        <item>Rams kicker Greg Zuerlein dealing with foot strain</item>
        <item>Chiefs hire Spagnuolo to replace Bob Sutton</item>
    </string-array>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thus</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="search">Search</string>
    <string name="calendar">Calendar</string>
    <string name="add">Add</string>
    <string name="historical_polls">Historical Polls</string>
    <string name="show_password_button">Show password button</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="report">Report</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="add_discussion">Add Discussion</string>
    <string name="add_your_discussion">Add your discussion</string>
    <string name="im_not_intrested_in_this_discussion">Im not intrested in this Discussion</string>
    <string name="it_s_spam">It’s spam</string>
    <string name="it_s_absuive_or_harmful">It’s absuive or harmful</string>
    <string name="send">Send</string>
    <string name="search_hint">Search news, players, teams</string>
    <string name="news">News</string>
    <string name="player">Player</string>
    <string name="players">Players</string>
    <string name="schedule">Schedule</string>
    <string name="events">Events</string>
    <string name="follow">Follow</string>
    <string name="mywatchlist">My Watchlist</string>
    <string name="remove_from_list">Remove from list</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="feedback">Feedback</string>
    <string name="help">Help</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add_title">Add title</string>
    <string name="add_your_message_for_feedbak_so_we_can_help_you">Add your Message for feedbak so we can help you
    </string>
    <string name="notifications">Notifications</string>
    <string name="delete">Delete</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="teams">Teams</string>
    <string name="following">Following</string>
    <string name="back_button">Back button</string>
    <string name="head_coach">HEAD COACH:</string>
    <string name="stadium">STADIUM:</string>
    <string name="stats">Stats</string>
    <string name="form_terms_line_2">the OSDB</string>
    <string name="form_terms_line_3"><![CDATA[ Terms & Conditions]]></string>
</resources>