<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_latest"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_latest"/>

    <item
            android:id="@+id/navigation_live_scores"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_live_scores"/>

    <item
            android:id="@+id/navigation_poll"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_poll"/>

    <item
            android:id="@+id/navigation_discussion"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_discussion"/>
</menu>
