<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent" android:layout_height="wrap_content"
>

    <LinearLayout
            android:id="@+id/label_days"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_below="@+id/label_month">
        <TextView
                android:text="@string/sunday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"

        />
        <TextView
                android:text="@string/monday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
        />
        <TextView
                android:text="@string/tuesday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
        />
        <TextView
                android:text="@string/wednesday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
        />
        <TextView
                android:text="@string/thursday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
        />
        <TextView
                android:text="@string/friday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
        />
        <TextView
                android:text="@string/saturday"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:gravity="center"
        />
    </LinearLayout>


    <LinearLayout
            android:id="@+id/weeks_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/label_days"
    />
    <TextView
            android:id="@+id/label_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|center"
            android:text="Label"
            android:layout_centerHorizontal="true"
            android:layout_alignLeft="@id/weeks_container"
            android:layout_alignStart="@id/weeks_container"
            android:textSize="14sp"
    />

</RelativeLayout>