<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginRight="@dimen/dp_20"
              android:layout_marginLeft="@dimen/dp_20">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="5dp"
            android:layout_marginTop="50dp"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_8798AD"/>

    <EditText
            android:id="@+id/title_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/rubik_light"
            android:hint="@string/add_title"
            android:maxLines="1"
            android:textSize="@dimen/sp_14"
            android:paddingLeft="@dimen/dp_15"
            android:paddingRight="@dimen/dp_15"
            android:imeOptions="actionNext"
            android:background="@drawable/login_regist_et_bg"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textAllCaps="true"
            android:gravity="center"
            android:padding="5dp"
            android:fontFamily="@font/rubik_medium"
            android:layout_marginTop="@dimen/dp_10"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/color_8798AD"/>
    <EditText
            android:id="@+id/message_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_250"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/rubik_light"
            android:hint="@string/add_your_message_for_feedbak_so_we_can_help_you"
            android:maxLines="10"
            android:textSize="@dimen/sp_14"
            android:padding="@dimen/dp_15"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:background="@drawable/login_regist_et_bg"/>
    <TextView
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/create_account_btn_bg"
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_30"
            android:textColor="@color/color_white"
            android:fontFamily="@font/rubik_medium"
            android:textSize="@dimen/sp_15"
            android:textAllCaps="true"
            android:text="@string/add"/>

</LinearLayout>