<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="25dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protect_your_account"
            android:textSize="28sp"
            android:textColor="@color/color_2E384D"
            android:textStyle="bold"
            android:layout_marginTop="25dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_password_subtext"
            android:textSize="15sp"
            android:textColor="@color/color_8798AD"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_min_8_characters"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="5dp"
            android:layout_marginTop="50dp"
            android:textSize="14sp"
            android:textColor="@color/color_8798AD"/>

    <EditText
            android:id="@+id/signupPassEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/dp_5"
            android:imeOptions="actionNext"
            android:background="@drawable/login_regist_et_bg"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:gravity="center"
            android:textAllCaps="true"
            android:padding="5dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            android:textColor="@color/color_8798AD"/>

    <EditText
            android:id="@+id/signupConfPassEt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="@dimen/dp_5"
            android:background="@drawable/login_regist_et_bg"/>


    <TextView
            android:id="@+id/createAccountBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/color_white"
            android:textStyle="bold"
            android:imeOptions="actionDone"
            android:textSize="@dimen/sp_14"
            android:text="@string/create_account"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:background="@drawable/login_register_btn_bg"/>
</LinearLayout>