<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
            android:id="@+id/signin_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/account_exists_text"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_8798AD"
            android:fontFamily="@font/rubik_light"
            android:padding="15dp"/>

    <View
            android:id="@+id/form_separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_above="@id/signin_tab"
            android:background="@color/color_E8ECF0"/>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_25"
            android:gravity="center_vertical"
            android:layout_above="@id/form_separator">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_to_osdb"
                android:textSize="@dimen/sp_28"
                android:textColor="@color/color_2E384D"
                android:fontFamily="@font/rubik_bold"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_form_subtext"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/color_8798AD"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik_medium"
                android:padding="@dimen/dp_5"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_8798AD"/>

        <EditText
                android:id="@+id/signup_name_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:inputType="text"
                android:maxLines="1"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:textSize="@dimen/sp_14"
                android:imeOptions="actionNext"
                android:fontFamily="@font/rubik_light"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:background="@drawable/login_regist_et_bg"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:gravity="center"
                android:textAllCaps="true"
                android:fontFamily="@font/rubik_medium"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_8798AD"/>

        <EditText
                android:id="@+id/signup_email_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/sp_14"
                android:fontFamily="@font/rubik_light"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:imeOptions="actionNext"
                android:background="@drawable/login_regist_et_bg"/>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textAllCaps="true"
                android:gravity="center"
                android:padding="5dp"
                android:fontFamily="@font/rubik_medium"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/sp_12"
                android:textColor="@color/color_8798AD"/>

        <EditText
                android:id="@+id/signup_phn_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_40"
                android:inputType="number"
                android:textSize="@dimen/sp_14"
                android:maxLines="1"
                android:maxLength="10"
                android:fontFamily="@font/rubik_light"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15"
                android:imeOptions="actionDone"
                android:background="@drawable/login_regist_et_bg"/>


        <TextView
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_50"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/cont_n"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:background="@drawable/login_register_btn_bg"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_terms_line"
                android:gravity="center"
                android:fontFamily="@font/rubik_light"
                android:paddingTop="5dp"
                android:layout_marginTop="15dp"/>
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/txt_term_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/form_terms_line_2"
                    android:gravity="center"
                    android:fontFamily="@font/rubik_light"
                    android:paddingBottom="5dp"/>
            <TextView
                    android:id="@+id/txt_term_3"
                    android:layout_toRightOf="@+id/txt_term_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_2"
                    android:text="@string/form_terms_line_3"
                    android:gravity="center"
                    android:fontFamily="@font/rubik_light"
                    android:paddingBottom="5dp"

            />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>