<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/onboarding_benefits_3">

    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="@dimen/dp_100"
               app:srcCompat="@drawable/ic_logo_white"
               android:layout_centerHorizontal="true"
               android:contentDescription="@string/logo"/>

    <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_130"
            android:orientation="vertical">

        <TextView
                android:id="@+id/benifit_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/benifit_3"
                android:textSize="@dimen/sp_26"
                android:fontFamily="@font/rubik_bold"
                android:textColor="@color/white"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lorem"
                android:textSize="@dimen/sp_14"
                android:fontFamily="@font/rubik_light"
                android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>